test/distributions/block/emptyBbox.good
emptyBbox.chpl:4: error: halt reached - Block() requires a non-empty boundingBox
